// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout should render default as expected 1`] = `
<div>
  <div
    className="sc-bxivhb lhxQdA"
  >
    <a
      className="sc-bdVaJa isEwPn"
      href="https://www.youtube.com/watch?v=DUT5rEU6pqM"
    >
      Say Hi
    </a>
  </div>
  I never really knew that she could dance like this
  <div
    className="sc-ifAKCX kgpNje sc-bxivhb lhxQdA"
  >
    <h4
      className="sc-bZQynM gpHdCB sc-htpNat wuXWV"
    >
      Joe Purnell © 2018 | Icons by Freepik from www.flaticon.com
    </h4>
  </div>
</div>
`;

exports[`Layout should render inverted as expected 1`] = `
<div>
  <div
    className="sc-bxivhb cJuWgM"
  >
    <a
      className="sc-bdVaJa cYDfzC"
      href="https://www.youtube.com/watch?v=DUT5rEU6pqM"
    >
      Say Hi
    </a>
  </div>
  She makes a man wants to speak Spanish
  <div
    className="sc-ifAKCX kgpNje sc-bxivhb lhxQdA"
  >
    <h4
      className="sc-bZQynM gpHdCB sc-htpNat wuXWV"
    >
      Joe Purnell © 2018 | Icons by Freepik from www.flaticon.com
    </h4>
  </div>
</div>
`;
